Criacao dos Requests e Response

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "cSpell.words": [
-        "iugu"
+        "cnpj",
+        "cpf",
+        "cpf or cnpj",
+        "digitable",
+        "digitable line",
+        "iugu",
+        "line",
+        "or"
     ]
 }
