--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -21,15 +21,23 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  dio: ^3.0.10
+  flutter_mobx: ^1.1.0+2
+  mobx: ^1.2.1+2
+  flutter_modular: ^2.0.0+1
+  iugu:
+    path: ../
   flutter:
     sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
 
 dev_dependencies:
+  mockito: ^4.1.1
+  mobx_codegen: ^1.1.0+1
+  build_runner: ^1.10.1
   flutter_test:
     sdk: flutter
 
@@ -74,3 +82,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+vars: 
+    clean: flutter clean
+    get: flutter pub get
+    runner: flutter pub run build_runner
+scripts: 
+    mobx_build: $clean & $get & $runner build --delete-conflicting-outputs
+    mobx_watch: $clean & $get & $runner watch --delete-conflicting-outputs
