--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "iugu",
         "line",
         "or"
-    ]
+    ],
+    "dart.flutterSdkPath": "C:\\Users\\bwolf\\fvm\\versions\\1.20.4"
 }
