--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,5 @@
         "line",
         "or"
     ],
-    "dart.flutterSdkPath": "C:\\Users\\bwolf\\fvm\\versions\\1.20.4"
+    "dart.flutterSdkPath": "/Users/jacobmoura/fvm/versions/1.20.4"
 }
