--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: iugu
 description: A new Flutter package project.
 version: 0.0.1-dev.1
-author:
-homepage:
+homepage: https://github.com/Flutterando/iugu
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
