--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,9 @@ environment:
   flutter: ">=1.17.0 <2.0.0"
 
 dependencies:
-  dartz: ^0.9.1
-  dio: ^3.0.10
-  uuid: 2.2.2
+  dartz: ">=0.9.1 <1.0.0"
+  dio: ">=3.0.0 <4.0.0"
+  uuid: ">=2.0.0 <3.0.0"
   flutter:
     sdk: flutter
 
