--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: iugu
-description: A new Flutter package project.
+description: Client Flutter/Dart de acesso aos principais recursos da Api da IUGU
 version: 0.0.1-dev.1
 homepage: https://github.com/Flutterando/iugu
 
