--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: iugu
 description: Client Flutter/Dart de acesso aos principais recursos da Api da IUGU
-version: 2.0.0
+version: 2.0.0+1
 homepage: https://github.com/Flutterando/iugu
 
 environment:
