--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -18,13 +18,13 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
-  uuid: ^2.2.2
-  dio: ^3.0.10
-  flutter_mobx: ^1.1.0+2
-  mobx: ^1.2.1+2
+  uuid: ^3.0.1
+  dio: ^4.0.0-beta4
+  flutter_mobx: ^2.0.0
+  mobx: ^2.0.1 
   flutter_modular: ^2.0.0+1
   iugu:
     path: ../
@@ -37,7 +37,7 @@ dependencies:
 
 dev_dependencies:
   mockito: ^4.1.1
-  mobx_codegen: ^1.1.0+1
+  mobx_codegen: ^2.0.1+3
   build_runner: ^1.10.1
   flutter_test:
     sdk: flutter
